force-app/main/default/objects/Employee__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Type your address</description>
    <inlineHelpText>Mention Your address in 100 length.</inlineHelpText>
    <label>Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>