force-app/main/default/objects/Employee__c/fields/Annucal_CTC__c.field-meta.xml
<CustomField>
    <fullName>Annucal_CTC__c</fullName>
    <description>add you annual ctc.</description>
    <inlineHelpText>Number of digits should be max 10 decimals.</inlineHelpText>
    <label>Annucal CTC</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>