force-app/main/default/objects/Employee__c/fields/Current_Employee__c.field-meta.xml
<CustomField>
    <fullName>Current_Employee__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Default - True</description>
    <label>Current Employee</label>
    <type>Checkbox</type>
</CustomField>