force-app/main/default/objects/Employee__c/fields/Has_role__c.field-meta.xml
<CustomField>
    <fullName>Has_role__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field made for the workflow. It determines the employee has a role or not.</description>
    <label>Has role</label>
    <type>Checkbox</type>
</CustomField>