force-app/main/default/objects/Employee__c/fields/Is_on_Notice_Period__c.field-meta.xml
<CustomField>
    <fullName>Is_on_Notice_Period__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is on Notice Period</label>
    <type>Checkbox</type>
</CustomField>