force-app/main/default/objects/Employee__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <inlineHelpText>Your Last name</inlineHelpText>
    <label>Last Name</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>