force-app/main/default/objects/Employee__c/fields/Last_Working_Day__c.field-meta.xml
<CustomField>
    <fullName>Last_Working_Day__c</fullName>
    <description>Calculated as Resignation Date + 60 days</description>
    <formula>Resignation_Date__c  +  60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Working Day</label>
    <type>Date</type>
</CustomField>