force-app/main/default/objects/Employee__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipName>EMPLOYEES</relationshipName>
    <type>Lookup</type>
</CustomField>