force-app/main/default/objects/Employee__c/fields/salary_Credited_Till_Date__c.field-meta.xml
<CustomField>
    <fullName>salary_Credited_Till_Date__c</fullName>
    <description>Shows the overall salary.</description>
    <label>salary Credited Till Date</label>
    <summarizedField>Salary__c.Gross_Salary__c</summarizedField>
    <summaryForeignKey>Salary__c.Credited_To__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>