force-app/main/default/objects/Employee__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Andhra Pradesh,</fullName>
            </value>
            <value>
                <fullName>Arunachal Pradesh,</fullName>
            </value>
            <value>
                <fullName>Assam,</fullName>
            </value>
            <value>
                <fullName>Bihar,</fullName>
            </value>
            <value>
                <fullName>Chhattisgarh,</fullName>
            </value>
            <value>
                <fullName>Goa,</fullName>
            </value>
            <value>
                <fullName>Gujarat,</fullName>
            </value>
            <value>
                <fullName>Haryana,</fullName>
            </value>
            <value>
                <fullName>Himachal Pradesh,</fullName>
            </value>
            <value>
                <fullName>Jharkhand,</fullName>
            </value>
            <value>
                <fullName>Karnataka,</fullName>
            </value>
            <value>
                <fullName>Kerala,</fullName>
            </value>
            <value>
                <fullName>Madhya Pradesh,</fullName>
            </value>
            <value>
                <fullName>Maharashtra,</fullName>
            </value>
            <value>
                <fullName>Manipur,</fullName>
            </value>
            <value>
                <fullName>Meghalaya,</fullName>
            </value>
            <value>
                <fullName>Mizoram,</fullName>
            </value>
            <value>
                <fullName>Nagaland,</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>