force-app/main/default/objects/Employee__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(
  NOT(Is_Active__c),
  IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;) &amp; &quot; Inactive&quot;,
  IF(
    Is_on_Notice_Period__c,
    IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;Yellow&quot;) &amp; &quot; On Notice Period&quot;,
    IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Green&quot;) &amp; &quot; Active&quot;
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>