force-app/main/default/objects/Employee__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <description>Mention your street address</description>
    <label>Street</label>
    <length>100</length>
    <type>Text</type>
</CustomField>