force-app/main/default/objects/Employee__c/validationRules/age_restriction.validationRule-meta.xml
<ValidationRule>
    <fullName>age_restriction</fullName>
    <active>true</active>
    <description>Enter your age in 21-30.</description>
    <errorConditionFormula>OR(
   YEAR(TODAY()) - YEAR( Date_of_Birth__c )  &lt; 21,
   YEAR(TODAY())- YEAR( Date_of_Birth__c )  &gt; 30
)</errorConditionFormula>
    <errorMessage>Your age should be in 21-30 range.</errorMessage>
</ValidationRule>