force-app/main/default/objects/Employee__c/validationRules/joining_date_lower_than_working_date.validationRule-meta.xml
<ValidationRule>
    <fullName>joining_date_lower_than_working_date</fullName>
    <active>true</active>
    <description>Last working date cannot be greater than the joining date</description>
    <errorConditionFormula>Last_Working_Day__c  &lt;  Date_of_Joining__c</errorConditionFormula>
    <errorMessage>Last working date cannot be greater than the joining date.</errorMessage>
</ValidationRule>