force-app/main/default/objects/Employee__c/validationRules/resignation_true_if_notice_period_True.validationRule-meta.xml
<ValidationRule>
    <fullName>resignation_true_if_notice_period_True</fullName>
    <active>true</active>
    <description>If the notice period is checked to be true, the resignation date cannot be null.</description>
    <errorConditionFormula>AND( Is_on_Notice_Period__c = True,
 ISBLANK( Resignation_Date__c ) 
)</errorConditionFormula>
    <errorMessage>If you on the Notice period then the resignation date must be set.</errorMessage>
</ValidationRule>