force-app/main/default/objects/Employee__c/validationRules/restrict_salary_record_for_inactivity.validationRule-meta.xml
<ValidationRule>
    <fullName>restrict_salary_record_for_inactivity</fullName>
    <active>true</active>
    <description>Restrict the creation of a salary record for an Inactive Employee.</description>
    <errorConditionFormula>NOT(ISBLANK( Annucal_CTC__c )) &amp;&amp;  Is_Active__c  = FALSE</errorConditionFormula>
    <errorDisplayField>Annucal_CTC__c</errorDisplayField>
    <errorMessage>Salary cannot be processed for inactive employees.</errorMessage>
</ValidationRule>