force-app/main/default/objects/Employee__c/listViews/All_Active_Memebers.listView-meta.xml
<ListView>
    <fullName>All_Active_Memebers</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Current_Employee__c</columns>
    <columns>Resignation_Date__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Active Members</label>
</ListView>