force-app/main/default/objects/Employee__c/listViews/All_Employee_on_Notice_Period.listView-meta.xml
<ListView>
    <fullName>All_Employee_on_Notice_Period</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Is_on_Notice_Period__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <columns>Last_Working_Day__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Is_on_Notice_Period__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Employee on Notice Period</label>
    <sharedTo>
        <role>HR_Manager</role>
    </sharedTo>
</ListView>