force-app/main/default/objects/Employee__c/listViews/All_Inactive_Employee.listView-meta.xml
<ListView>
    <fullName>All_Inactive_Employee</fullName>
    <columns>NAME</columns>
    <columns>Full_Name__c</columns>
    <columns>Date_of_Joining__c</columns>
    <columns>Last_Working_Day__c</columns>
    <columns>Resignation_Date__c</columns>
    <columns>Manager__c</columns>
    <filterScope>ScopingRule</filterScope>
    <filters>
        <field>Is_Active__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Inactive Employee</label>
    <sharedTo>
        <role>HR_Manager</role>
    </sharedTo>
</ListView>